@@ -1,3 +1,8 @@
+2005-10-13  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* Makefile.am: 
+	Add shadow man pages for atobm and bmtoa.
+
 2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* Makefile.am:
